# bergmann_test

./: CMakeLists.txt  Point3D.cpp  Point3D.h  README.md  Segment3D.cpp  Segment3D.h  Vector3D.cpp  Vector3D.h  main.cpp
tests/: segmentTests.cpp
